Fix spacing in nav and center footer on mobile

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -3,4 +3,12 @@ footer{
     color: $white;
     font-size: .9rem;
     padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+}
+
+@media screen and (min-width: 1024px){
+    footer{
+        justify-content: flex-start;
+    }
 }
